feat: added the most-searched-recipe section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,13 @@ select:focus {
     justify-content: center;
   }
 
+  .d-flex-col-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   .d-flex-between {
     display: flex;
     align-items: center;
