--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,10 @@ h6 {
   line-height: 1.4;
 }
 
+h4>span {
+  color: #ed1b24;
+}
+
 p {
   margin-top: 0;
 }
@@ -102,7 +106,7 @@ select:focus {
   .text-balance {
     text-wrap: balance;
   }
-  
+
   .container {
     max-width: 1400px;
     margin-inline: auto;
@@ -127,4 +131,22 @@ select:focus {
     align-items: center;
     justify-content: space-between;
   }
+  
+  .bg-pattern  {
+    --s: 300px; /* control the size*/
+    --c1: #f2f2f2;
+    --c2: #ffffff;
+    --c3: #e8e8e8;
+    
+    --_g: var(--c3) 0 120deg,#0000 0;
+    background:
+      conic-gradient(from -60deg at 50% calc(100%/3),var(--_g)),
+      conic-gradient(from 120deg at 50% calc(200%/3),var(--_g)),
+      conic-gradient(from  60deg at calc(200%/3),var(--c3) 60deg,var(--c2) 0 120deg,#0000 0),
+      conic-gradient(from 180deg at calc(100%/3),var(--c1) 60deg,var(--_g)),
+      linear-gradient(90deg,var(--c1)   calc(100%/6),var(--c2) 0 50%,
+                            var(--c1) 0 calc(500%/6),var(--c2) 0);
+    background-size: calc(1.732*var(--s)) var(--s);
+  }
 }
+
